--- a/templates/main_crontroller/index.html
+++ b/templates/main_crontroller/index.html
@@ -16,9 +16,9 @@
                     <p class="card-text" style="font-size: 20px"></p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="img/localisation.png" alt="localisation" width="50" height="40">&ensp; Braine-le-Comte</li>
-                    <li class="list-group-item"  style="font-size: 17px; display: inline"><img src="img/etoile.png" alt="localisation" width="40" height="40">&ensp; Retours et témoignages disponibles</li>
-                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="img/cours.png" alt="localisation" width="40" height="40">&ensp; Cours à distance et en présentiel</li>
+                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="./public/img/localisation.png" alt="localisation" width="50" height="40">&ensp; Braine-le-Comte</li>
+                    <li class="list-group-item"  style="font-size: 17px; display: inline"><img src="./public/img/etoile.png" alt="localisation" width="40" height="40">&ensp; Retours et témoignages disponibles</li>
+                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="./plublic/img/cours.png" alt="localisation" width="40" height="40">&ensp; Cours à distance et en présentiel</li>
                 </ul>
             </div>
             
