--- a/templates/main_crontroller/index.html
+++ b/templates/main_crontroller/index.html
@@ -8,17 +8,17 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
             <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
         </head>
-        <body background="img/tableau.png"><br><br><br>
+        <body background="../../public/img/tableau.png"><br><br><br>
             <div class="card" style="width: 30%; background-color:grey; float: left; margin-left: 10%">
-                <img class="card-img-top" src="img/photo.jpg" alt="photo">
+                <img class="card-img-top" src="../../public/img/photo.jpg" alt="photo">
                 <div class="card-body">
                     <h5 class="card-title" style="font-size: 25px"><b>Emmanuel Vanzeveren</b></h5>
                     <p class="card-text" style="font-size: 20px"></p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="./public/img/localisation.png" alt="localisation" width="50" height="40">&ensp; Braine-le-Comte</li>
-                    <li class="list-group-item"  style="font-size: 17px; display: inline"><img src="./public/img/etoile.png" alt="localisation" width="40" height="40">&ensp; Retours et témoignages disponibles</li>
-                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="./plublic/img/cours.png" alt="localisation" width="40" height="40">&ensp; Cours à distance et en présentiel</li>
+                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="../../public/img/localisation.png" alt="localisation" width="50" height="40">&ensp; Braine-le-Comte</li>
+                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="../../public/img/etoile.png" alt="localisation" width="40" height="40">&ensp; Retours et témoignages disponibles</li>
+                    <li class="list-group-item" style="font-size: 17px; display: inline"><img src="../../public/img/cours.png" alt="localisation" width="40" height="40">&ensp; Cours à distance et en présentiel</li>
                 </ul>
             </div>
             
