--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/commentaires">Commentaireszzz</a>
+                        <a class="nav-link" href="/commentaires">Commentaires</a>
                     </li>  
                     <li class="nav-item">
                         <a class="nav-link {{ 
